NEXT-1853 - Not filters

--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
@@ -178,6 +178,10 @@ $sw-condition-base-color-error: $color-crimson;
         }
     }
 
+    .field--switch {
+        @extend .sw-condition-base__base-field;
+    }
+
     .field--multi {
         @extend .sw-condition-base__base-field;
         height: auto;
