NEXT-1623 - Add category empty state and added minimum searchTerm length

--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -63,7 +63,12 @@
                 {% block sw_category_content_loader %}
                     <sw-loader v-if="!categories"></sw-loader>
                 {% endblock %}
+
+                {% block sw_category_content_empty %}
+                    <sw-empty-state v-if="!category" title="Keine Kategorie ausgewählt"></sw-empty-state>
+                {% endblock %}
             </template>
+
         {% endblock %}
 
         {% block sw_category_sidebar %}
