--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -1,23 +1,20 @@
-{% block sw_condition_container %}
+{% block sw_condition_and_container %}
     <div class="sw-condition-or-container " :class="containerRowClass">
-        {% block sw_condition_container_content %}
+        {% block sw_condition_or_container_content %}
             <div class="sw-condition-or-container__condition-content">
-                {% block sw_condition_container_children %}
+                {% block sw_condition_or_container_children %}
                     <div v-for="(child, index) in sortedChildren"
                          :key="index"
                          :class="'sw-condition-container__or-child--' + index">
-                        {% block sw_condition_container_children_spacer %}
+                        {% block sw_condition_or_container_children_spacer %}
                             <div v-if="index"
                                  class="condition-content__spacer--or">
-                                {{ $tc('global.sw-condition.condition.or').toUpperCase() }}
+                                {{ $tc('global.sw-condition.condition.or') }}
                             </div>
                         {% endblock %}
-                        {% block sw_condition_container_children_component %}
+                        {% block sw_condition_or_container_children_component %}
                             <component :is="getComponent(child)"
                                        :condition="child"
-                                       :entityAssociationStore="entityAssociationStore"
-                                       :config="config"
-                                       :conditionStore="conditionStore"
                                        :level="level + 1"
                                        :parentDisabledDelete="disabledDeleteButton"
                                        @delete-condition="onDeleteCondition"
@@ -27,7 +24,7 @@
                         {% endblock %}
                     </div>
                 {% endblock %}
-                {% block sw_condition_container_actions %}
+                {% block sw_condition_or_container_actions %}
                     <div class="sw-condition-or-container__actions">
                         <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick">
                             {{ $tc('global.sw-condition.condition.or') }}
