--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-group/sw-condition-customer-group.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-group/sw-condition-customer-group.html.twig
@@ -1,15 +1,15 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_customer_group_field_operator %}
         <sw-condition-operator-select operatorSetName="multiStore"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
+    {% block sw_condition_customer_group_field_customer_group_ids %}
         <sw-condition-value multi
                             name="customerGroupIds"
                             :id="condition.id"
                             :store="getCustomerGroupStore()"
-                            class="field field--main field--multi"
+                            class="field--main"
                             v-model="condition.value.customerGroupIds">
         </sw-condition-value>
     {% endblock %}
