--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-number/sw-condition-billing-customer-number.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-number/sw-condition-billing-customer-number.html.twig
@@ -1,11 +1,11 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_billing_customer_number_field_operator %}
         <sw-condition-operator-select operatorSetName="multiStore"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
-        <sw-tagged-field class="field field--multi field--main"
+    {% block sw_condition_billing_customer_number_field_numbers %}
+        <sw-tagged-field class="field--main"
                          name="numbers"
                          v-model="condition.value.numbers">
         </sw-tagged-field>
