--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -1,24 +1,28 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_value %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_date_range_field_use_time %}
         <sw-field type="switch"
                   name="useTime"
                   :label="$tc('global.sw-condition.condition.dateRangeRule.useTime')"
                   v-model="useTime"
-                  class="field--switch has--arrow">
+                  class="has--arrow">
         </sw-field>
+    {% endblock %}
+    {% block sw_condition_date_range_field_from_date %}
         <sw-field type="date"
                   :dateType="condition.value.useTime ? 'datetime' : 'date'"
                   name="fromDate"
                   :config="datepickerConfig"
                   v-model="fromDate"
-                  class="field--main field--date field--from-date has--arrow">
+                  class="field--main field--from-date has--arrow">
         </sw-field>
+    {% endblock %}
+    {% block sw_condiiton_date_range_field_to_date %}
         <sw-field type="date"
                   :dateType="condition.value.useTime ? 'datetime' : 'date'"
                   name="toDate"
                   :config="datepickerConfig"
                   v-model="toDate"
-                  class="field--main field--date field--to-date">
+                  class="field--main field--to-date">
         </sw-field>
     {% endblock %}
 {% endblock %}
