--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-items-in-cart/sw-condition-line-items-in-cart.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-items-in-cart/sw-condition-line-items-in-cart.html.twig
@@ -1,15 +1,15 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_line_items_in_cart_field_operator %}
         <sw-condition-operator-select operatorSetName="multiStore"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
+    {% block sw_condition_line_items_in_cart_field_identifiers %}
         <sw-condition-value multi
                             name="identifiers"
                             :id="condition.id"
                             :store="getProductStore()"
-                            class="field field--main field--multi"
+                            class="field--main"
                             v-model="condition.value.identifiers">
         </sw-condition-value>
     {% endblock %}
