--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.scss
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.scss
@@ -23,7 +23,7 @@ $sw-condition-not-found-color-error: $color-crimson;
         }
     }
 
-    .field {
+    .sw-condition-base__base-field {
         border-top-color: $sw-condition-not-found-color-error;
         border-bottom-color: $sw-condition-not-found-color-error;
     }
