--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-operator-select/sw-condition-operator-select.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-operator-select/sw-condition-operator-select.html.twig
@@ -1,9 +1,11 @@
-<sw-select :id="createId()"
-           itemValueKey="identifier"
-           displayName="label"
-           :store="operators"
-           :required="true"
-           v-model="operatorValue"
-           class="field--select has--arrow"
-           @input="$emit('input', $event)">
-</sw-select>
+{% block sw_condition_operator_select %}
+    <sw-select :id="createId()"
+               itemValueKey="identifier"
+               displayName="label"
+               :store="operators"
+               :required="true"
+               v-model="operatorValue"
+               class="sw-condition-operator-select has--arrow"
+               @input="$emit('input', $event)">
+    </sw-select>
+{% endblock %}
