--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
@@ -1,15 +1,15 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_sales_channel_field_operator %}
         <sw-condition-operator-select operatorSetName="multiStore"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
+    {% block sw_condition_sales_channel_field_sales_channel_ids %}
         <sw-condition-value multi
                             name="salesChannelIds"
                             :id="condition.id"
                             :store="getSalesChannelStore()"
-                            class="field field--multi field--main"
+                            class="field--main"
                             v-model="condition.value.salesChannelIds">
         </sw-condition-value>
     {% endblock %}
