--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-country/sw-condition-shipping-country.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-country/sw-condition-shipping-country.html.twig
@@ -1,15 +1,15 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_shipping_country_field_operator %}
         <sw-condition-operator-select operatorSetName="multiStore"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
+    {% block sw_condition_shipping_country_field_country_ids %}
         <sw-condition-value multi
                             name="countryIds"
                             :id="condition.id"
                             :store="getCountryStore()"
-                            class="field field--main field--multi"
+                            class="field--main"
                             v-model="condition.value.countryIds">
         </sw-condition-value>
     {% endblock %}
