--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-street/sw-condition-shipping-street.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-street/sw-condition-shipping-street.html.twig
@@ -1,11 +1,11 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_shipping_street_field_operator %}
         <sw-condition-operator-select operatorSetName="string"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
-        <sw-field class="field field--main"
+    {% block sw_condition_shipping_street_field_street_name %}
+        <sw-field class="field--main"
                   name="streetName"
                   v-model="condition.value.streetName">
         </sw-field>
