--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-zip-code/sw-condition-shipping-zip-code.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-zip-code/sw-condition-shipping-zip-code.html.twig
@@ -1,11 +1,11 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_shipping_zip_code_field_operator %}
         <sw-condition-operator-select operatorSetName="multiStore"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
-        <sw-tagged-field class="field field--main field--multi"
+    {% block sw_condition_shipping_zip_code_field_zip_codes %}
+        <sw-tagged-field class="field--main"
                          name="zipCodes"
                          v-model="condition.value.zipCodes">
         </sw-tagged-field>
