NEXT-1623 - Fix multiselect delete button styling in product assignment

--- a/Resources/administration/src/app/component/base/sw-button/sw-button.scss
+++ b/Resources/administration/src/app/component/base/sw-button/sw-button.scss
@@ -69,7 +69,8 @@ $sw-button-default-disabled-color:    $color-light-gray;
         color: lighten($sw-button-default-color-text, 30%);
     }
 
-    &.sw-button--square .sw-icon {
+    &.sw-button--square:not([disabled]) .sw-icon,
+    &.sw-button--square:not(.sw-button--disabled) .sw-icon {
         color: $sw-button-default-color-text;
     }
 
