NEXT-1623 - Added css dropup option in sw-context-menu

--- a/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
@@ -62,7 +62,7 @@
 
                     {% block sw_category_tree_items_actions %}
                         <template slot="actions" slot-scope="{ item, openTreeItem }">
-                            <sw-context-button>
+                            <sw-context-button menuVerticalAlign="top">
 
                                 <div class="sw-context-menu__group">
                                     {% block sw_category_tree_items_actions_subcategory %}
